--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.9",
+    "@hono/zod-validator": "^0.7.6",
     "@prisma/adapter-better-sqlite3": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "better-sqlite3": "^12.6.2",
     "hono": "^4.11.4",
-    "prisma": "^7.2.0"
+    "prisma": "^7.2.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
